[gd_scene load_steps=5 format=3 uid="uid://5b10y40f18d0"]

[ext_resource type="Script" path="res://scenes/card_ui/joker_card_ui.gd" id="1_w0vkl"]
[ext_resource type="Theme" uid="uid://pqx6ev30fd8o" path="res://main_theme.tres" id="2_bntgr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsrlg"]
bg_color = Color(0.839216, 0.854902, 0.823529, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.643137)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7l8iu"]
bg_color = Color(0, 0.266667, 0.968627, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(112, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -968.0
offset_bottom = -545.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w0vkl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rsrlg")

[node name="FaceValue" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.116
anchor_top = 0.091
anchor_right = 0.116
anchor_bottom = 0.091
offset_left = -9.992
offset_top = -12.925
offset_right = 10.008
offset_bottom = 13.075
theme = ExtResource("2_bntgr")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "JOKER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FaceValue2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.902
anchor_top = 0.931
anchor_right = 0.902
anchor_bottom = 0.931
offset_left = 7.97599
offset_top = 9.075
offset_right = 27.976
offset_bottom = 35.075
rotation = 3.14159
theme = ExtResource("2_bntgr")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "JOKER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Art" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -60.0
offset_right = 36.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CardBack" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7l8iu")

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 112.0
offset_bottom = 47.0
grow_vertical = 0
alignment = 1

[node name="ButtonHeart" type="Button" parent="ButtonsHBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bntgr")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "♥"

[node name="ButtonDiamond" type="Button" parent="ButtonsHBoxContainer"]
layout_mode = 2
theme = ExtResource("2_bntgr")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "♦"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ButtonsHBoxContainer/ButtonHeart" to="." method="_on_button_heart_pressed"]
[connection signal="pressed" from="ButtonsHBoxContainer/ButtonDiamond" to="." method="_on_button_diamond_pressed"]
